--- a/index.html
+++ b/index.html
@@ -1,7 +1,37 @@
 <!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
-</html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <!-- UNICONS -->
+        <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
+
+        <!-- SWIPER CSS -->
+        <link rel="stylesheet" href="">
+
+        <!-- CSS -->
+        <link rel="stylesheet" href="assets/css/styles.css">
+
+        <title>Responsive Portfolio Website</title>
+    </head>
+    <body>
+        <!-- HEADER -->
+
+
+        <!-- MAIN -->
+        <main class="main">
+
+        </main>
+
+        <!-- FOOTER -->
+
+
+        <!-- SCROLL TOP -->
+
+
+        <!-- SWIPER JS -->
+        <script src=""></script>
+
+    </body>
+    </html>
