Tried importing js file

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <!-- CSS -->
         <link rel="stylesheet" href="assets/css/styles.css">
 
+        <!-- JS -->
+        <script src="main.js"></script>
+
         <title>Jasper Portfolio Website</title>
     </head>
     <body>
