--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!-- CSS -->
         <link rel="stylesheet" href="assets/css/styles.css">
 
-        <title>Responsive Portfolio Website</title>
+        <title>Jasper Portfolio Website</title>
     </head>
     <body>
         <!-- HEADER -->
@@ -21,36 +21,36 @@
             <nav class="nav container">
                 <a href="#" class="nav__logo">Jasper</a>
 
-                <div class="nav__menu menu" id="nav">
+                <div class="nav__menu menu" id="nav-menu">
                     <u1 class="nav__list grid">
                         <li class="nav__item">
                             <a href="#home" class="nav__link">
-                                <i class="uil uil-estate"></i> Home
+                                <i class="uil uil-estate nav__icon"></i> Home
                             </a>
                         </li>
                         <li class="nav__item">
                             <a href="#about" class="nav__link">
-                                <i class="uil uil-user"></i> About
+                                <i class="uil uil-user nav__icon"></i> About
                             </a>
                         </li>
                         <li class="nav__item">
                             <a href="#skills" class="nav__link">
-                                <i class="uil uil-file-alt"></i> Skills
+                                <i class="uil uil-file-alt nav__icon"></i> Skills
                             </a>
                         </li>
                         <li class="nav__item">
                             <a href="#services" class="nav__link">
-                                <i class="uil uil-briefcase-alt"></i> Services
+                                <i class="uil uil-briefcase-alt nav__icon"></i> Services
                             </a>
                         </li>
                         <li class="nav__item">
                             <a href="#portfolio" class="nav__link">
-                                <i class="uil uil-scenery"></i> Portfolio
+                                <i class="uil uil-scenery nav__icon"></i> Portfolio
                             </a>
                         </li>
                         <li class="nav__item">
                             <a href="#contact" class="nav__link">
-                                <i class="uil uil-message"></i> Contactme
+                                <i class="uil uil-message nav__icon"></i> Contactme
                             </a>
                         </li>
                     </u1>
