Navbar Bug Fixes

--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
         <!-- CSS -->
         <link rel="stylesheet" href="assets/css/styles.css">
 
-        <!-- JS -->
-        <script src="main.js"></script>
 
         <title>Jasper Portfolio Website</title>
     </head>
@@ -81,6 +79,8 @@
 
         <!-- SWIPER JS -->
         <script src=""></script>
+        <!-- JS -->
+        <script src="assets/js/main.js"></script>
 
     </body>
     </html>
